--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -601,12 +601,25 @@ One choice is $\begin{cases}a=\sqrt{\alpha/2}\\b=\sqrt{1-\alpha/2}\end{cases}$
 ## HW5
 
 **12.2** Show that the extrema of are given by
-
 $f(b)=\frac1{1+b^2}{[S_{yy} -2bS_{xy}+ b^2S_{xx}]}$
 
 $b=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}$
-
 Show that the "+" solution gives the minimum of $f(b)$.
+
+$f(b)=\frac1{1+b^2}{[S_{yy}-S_{xx} -2bS_{xy}+(1+b^2)S_{xx}]}=\frac{S_{yy}-S_{xx}}{1+b^2}-\frac{2bS_{xy}}{1+b^2} +S_{xx}$
+
+$$\frac{\partial f(b)}{\partial b}=(-1)(2b)\frac{S_{yy}-S_{xx}}{(1+b^2)^2}-2S_{xy}\frac{1+b^2-b(2b)}{(1+b^2)^2}+0=\frac{2(S_{xx}-S_{yy})b+2S_{xy}b^2-2S_{xy}}{(1+b^2)^2}\overset{set}{=}0$$
+
+$$S_{xy}b^2+(S_{xx}-S_{yy})b-S_{xy}=0$$
+
+$$b=\frac{-(S_{xx}-S_{yy}) \pm \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}$$
+
+$$\frac{\partial f(b)}{\partial b}=\frac{2(S_{xx}-S_{yy})b}{(1+b^2)^2}+\frac{2S_{xy}}{1+b^2}-\frac{4S_{xy}}{(1+b^2)^2}$$
+
+$$\frac{\partial^2 f(b)}{\partial b^2}=2(S_{xx}-S_{yy})\frac{(1+b^2)^2-b(2)(1+b^2)(2b)}{(1+b^2)^4}+\frac{2S_{xy}(-1)(2b)}{(1+b^2)^2}-\frac{4S_{xy}(-1)(2b)}{(1+b^2)^3}\overset{set}{=}c$$
+$$=\frac{2(S_{xx}-S_{yy})}{(1+b^2)^2}-\frac{8b^2(S_{xx}-S_{yy})}{(1+b^2)^3}-\frac{4bS_{xy}}{(1+b^2)^2}+\frac{8bS_{xy}}{(1+b^2)^3}=\frac{2(S_{xx}-S_{yy}-2bS_{xy})}{(1+b^2)^2}-\frac{8b(bS_{xx}-bS_{yy}-S_{xy})}{(1+b^2)^3}$$
+
+$$=\frac{2(S_{xx}-S_{yy})(1-3b^2)}{(1+b^2)^3}-\frac{4bS_{xy}(1+b^2)}{(1+b^2)^3}+\frac{8bS_{xy}}{(1+b^2)^3}=\frac{2}{(1+b^2)^3}[(S_{xx}-S_{yy})(1-3b^2)+4bS_{xy}(1-b^2)]=c$$
 
 **12.4** Consider the MLE of the slope i n the EIV model
 
