--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -911,16 +911,17 @@ $\varepsilon_{ijk}$, $\tau_{i}$, $\beta_{j}$ and $\gamma_{k}$ are independent.
 
 (b) Create the table with df, SS, EMS and F test statistic for each term in the model.
 
-$df_E=df_T-df_A-df_B-df_C-df_{AB}-df_{AC}=abc-1-(a-1)-(b-1)-(c-1)-(ab-a-b+1)-(ac-a-c+1)=a(b-1)(c-1)$
+$df_E=df_T-df_A-df_B-df_C-df_{AB}-df_{AC}=abc-1-(a-1)-(b-1)-(c-1)-(ab-a-b+1)-(ac-a-c+1)$
+$=a(b-1)(c-1)$
 
 |term | i | j | k | df |  SS | EMS | F   |
 | --- |-- |-- | --| -- | --- | --- | --- |
 |$\tau_{i}$|1|b|c|$a-1$|$\frac1{bc}\sum_{i=1}^ay_{i..}^2-\frac{1}{abc}y_{...}^2$|$bc\sigma^2_{\tau}+c\sigma^2_{\tau\beta}+b\sigma^2_{\tau\gamma}+\sigma^2$|$\frac{MS_{A}}{MS_{AB}+MS_{AC}-MS_{E}}$|
 |$\beta_{j}$|a|1|c|$b-1$|$\frac1{ac}\sum_{j=1}^by_{.j.}^2-\frac{1}{abc}y_{...}^2$|$ac\sigma^2_{\beta}+c\sigma^2_{\tau\beta}+\sigma^2$|$\frac{MS_{B}}{MS_{AB}}$|
 |$\gamma_{k}$|a|b|1|$c-1$|$\frac1{ab}\sum_{k=1}^cy_{..k}^2-\frac{1}{abc}y_{...}^2$|$ab\sigma^2_{\gamma}+b\sigma^2_{\tau\gamma}+\sigma^2$|$\frac{MS_{C}}{MS_{AC}}$|
-|$(\tau\beta)_{ij}$|1|1|c|$(a-1)(b-1)$|$\frac1c\sum_{i=1}^a\sum_{j=1}^by_{ij.}^2-\frac1{bc}\sum_{i=1}^ay_{i..}^2-\frac1{ac}\sum_{j=1}^by_{.j.}^2+\frac{1}{abc}y_{...}^2$|$c\sigma^2_{\tau\beta}+\sigma^2$|$\frac{MS_{AB}}{MS_{E}}$|
-|$(\tau\gamma)_{ik}$|1|b|1|$(a-1)(c-1)$|$\frac1b\sum_{i=1}^a\sum_{k=1}^cy_{i.k}^2-\frac1{bc}\sum_{i=1}^ay_{i..}^2-\frac1{ab}\sum_{k=1}^cy_{..k}^2+\frac{1}{abc}y_{...}^2$|$b\sigma^2_{\tau\gamma}+\sigma^2$|$\frac{MS_{AC}}{MS_{E}}$|
-|$\varepsilon_{ijk}$|1|1|1|$a(b-1)(c-1)$|$$\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^cy_{ijk}^2-\frac{1}{abc}y_{...}^2$|$\sigma^2$$||
+|$(\tau\beta)_{ij}$|1|1|c|$(a-1)(b-1)$|$$\frac1c\sum_{i=1}^a\sum_{j=1}^by_{ij.}^2-\frac1{bc}\sum_{i=1}^ay_{i..}^2-\frac1{ac}\sum_{j=1}^by_{.j.}^2+\frac{1}{abc}y_{...}^2$$|$c\sigma^2_{\tau\beta}+\sigma^2$|$\frac{MS_{AB}}{MS_{E}}$|
+|$(\tau\gamma)_{ik}$|1|b|1|$(a-1)(c-1)$|$$\frac1b\sum_{i=1}^a\sum_{k=1}^cy_{i.k}^2-\frac1{bc}\sum_{i=1}^ay_{i..}^2-\frac1{ab}\sum_{k=1}^cy_{..k}^2+\frac{1}{abc}y_{...}^2$$|$b\sigma^2_{\tau\gamma}+\sigma^2$|$\frac{MS_{AC}}{MS_{E}}$|
+|$\varepsilon_{ijk}$|1|1|1|$a(b-1)(c-1)$|$$\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^cy_{ijk}^2-\frac{1}{abc}y_{...}^2$$|$\sigma^2$||
 
 
 
