--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -617,9 +617,11 @@ $$b=\frac{-(S_{xx}-S_{yy}) \pm \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}$$
 $$\frac{\partial f(b)}{\partial b}=\frac{2(S_{xx}-S_{yy})b}{(1+b^2)^2}+\frac{2S_{xy}}{1+b^2}-\frac{4S_{xy}}{(1+b^2)^2}$$
 
 $$\frac{\partial^2 f(b)}{\partial b^2}=2(S_{xx}-S_{yy})\frac{(1+b^2)^2-b(2)(1+b^2)(2b)}{(1+b^2)^4}+\frac{2S_{xy}(-1)(2b)}{(1+b^2)^2}-\frac{4S_{xy}(-1)(2b)}{(1+b^2)^3}\overset{set}{=}c$$
-$$=\frac{2(S_{xx}-S_{yy})}{(1+b^2)^2}-\frac{8b^2(S_{xx}-S_{yy})}{(1+b^2)^3}-\frac{4bS_{xy}}{(1+b^2)^2}+\frac{8bS_{xy}}{(1+b^2)^3}=\frac{2(S_{xx}-S_{yy}-2bS_{xy})}{(1+b^2)^2}-\frac{8b(bS_{xx}-bS_{yy}-S_{xy})}{(1+b^2)^3}$$
+$$=\frac{2(S_{xx}-S_{yy})}{(1+b^2)^2}-\frac{8b^2(S_{xx}-S_{yy})}{(1+b^2)^3}-\frac{4bS_{xy}}{(1+b^2)^2}+\frac{16bS_{xy}}{(1+b^2)^3}=\frac{2(S_{xx}-S_{yy}-2bS_{xy})}{(1+b^2)^2}-\frac{8b(bS_{xx}-bS_{yy}-2S_{xy})}{(1+b^2)^3}$$
 
-$$=\frac{2(S_{xx}-S_{yy})(1-3b^2)}{(1+b^2)^3}-\frac{4bS_{xy}(1+b^2)}{(1+b^2)^3}+\frac{8bS_{xy}}{(1+b^2)^3}=\frac{2}{(1+b^2)^3}[(S_{xx}-S_{yy})(1-3b^2)+4bS_{xy}(1-b^2)]=c$$
+$$=\frac{2(S_{xx}-S_{yy})(1-3b^2)}{(1+b^2)^3}-\frac{4bS_{xy}(1+b^2)}{(1+b^2)^3}+\frac{16bS_{xy}}{(1+b^2)^3}=\frac{2}{(1+b^2)^3}[(S_{xx}-S_{yy})(1-3b^2)+2bS_{xy}(3-b^2)]=c$$
+
+$$=\frac{[2(S_{xx}-S_{yy})+4bS_{xy}](1+b^2)^2-[2(S_{xx}-S_{yy})b+2S_{xy}b^2-2S_{xy}][2(1+b^2)(2b)]}{(1+b^2)^4}=\frac{2}{(1+b^2)^3}[(S_{xx}-S_{yy})(1-3b^2)+2bS_{xy}(3-b^2)]=c$$
 
 **12.4** Consider the MLE of the slope i n the EIV model
 
