--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -629,7 +629,7 @@ $\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy
 
 where $\lambda=\sigma^2_\delta/\sigma^2_\varepsilon$ is assumed known.
 
-(a) Show that $\lim\limits_{\lambda\to0}\hat\beta(\lambda)=S_{xy}/S_{xx}$, the slope of the ordinary regression of y on.
+(a) Show that $\lim\limits_{\lambda\to0}\hat\beta(\lambda)=S_{xy}/S_{xx}$, the slope of the ordinary regression of y on x.
 
 (b) Show that  $\lim\limits_{\lambda\to\infty}\hat\beta(\lambda)=S_{yy}/S_{xy}$ the reciprocal of the slope of the ordinary r gression of x on y.
 
@@ -639,18 +639,24 @@ where $\lambda=\sigma^2_\delta/\sigma^2_\varepsilon$ is assumed known.
 
 (e) The following data were collected in a study to examine the relationship between brain weight and body weight in a number of animal species.
 
-Species
-Arctic fox, Owl monkey, Mountain beaver, Guinea pig, Chinchilla, Ground squirrel, Tree hyrax, Big brown bat
+Species: Arctic fox, Owl monkey, Mountain beaver, Guinea pig, Chinchilla, Ground squirrel, Tree hyrax, Big brown bat
 
-Body weight (kg)
-(x)
-3.385, .480, 1 .350, 1 .040, .425, .101, 2.000, .023
-
-Brain weight (g)
-(y)
-44.50, 15.50, 8.10, 5.50, 6.40, 4.00, 12.30, .30
+Body weight (kg):(x) 3.385, .480, 1 .350, 1 .040, .425, .101, 2.000, .023
+Brain weight (g):(y) 44.50, 15.50, 8.10, 5.50, 6.40, 4.00, 12.30, .30
 
 Caiculate the MLE of the slope assuming the EIV model. Also, calculate the least squares slopes of the regressions of y on x and of x on y, and show how these quantities bound the MLE.
+
+```{r echo=FALSE}
+x <-c(3.385, .480, 1.350, 1.040, .425, .101, 2.000, .023) 
+y <-c(44.50, 15.50, 8.10, 5.50, 6.40, 4.00, 12.30, .30) 
+s_xx <- sum((x-mean(x))^2)
+s_yy <- sum((y-mean(y))^2)
+s_xy<- sum((x-mean(x))*(y-mean(y)))
+
+(s_yy-s_xx+sqrt((s_xx-s_yy)^2+4*s_xy^2))/(2*s_xy)
+```
+
+
 
 
 
