566 HW4 fix May 18

--- a/docs/usp570/pm_usp570.Rmd
+++ b/docs/usp570/pm_usp570.Rmd
@@ -20,33 +20,96 @@ To:  Scott Haggerty, chair of governing Commission of Bay Area Metropolitan Tran
 
 From: Shen Qu, Policy Advisor
 
-Date: 5/2/2019 
+Date: 6/11/2019 
 
-RE: Autonomous vehicles and land use
-
-
-Choose a metropolitan area. This could be the same one that you use for your case study assignment. Imagine that you have been asked by the MPO to provide advice on how the MPO, as well as the cities within the region, should be planning for autonomous vehicles. Prepare a memo that does the following:
-
-Explains the current and projected status of AVs
-
-Discusses how AVs could influence demand for transportation and, in turn land use. For this analysis, use both theory and research.
-
-Identifies the benefits and costs of these possible outcomes.
-
-Presents policy and planning options for mitigating or otherwise addressing the possible land use effects.
-
-Discusses how the MPO and cities may need alter the tools and analyses they use to consider AVs.
-
-This memo is just one of a series that the MPO is commissioning on this topic. Therefore, your memo should focus on land use (broadly defined, including housing, parking, urban design). Other memos will covers topics related to AVS such as safety and liability.
+RE: How Bay Area should be planning for autonomous vehicles? 
 
 
 # Summary
 
-Accessibility, the ease of reaching destinations, is an important land use and transportation performance measure [@boisjoly2017insider].
-The decision-making process should include clear accessibility objectives, definitions, and indicators in Plan Bay Area 2050. Some approaches and tools can promote achieving greater accessibility. The equity analysis of accessibility can help to reduce the risks of social exclusion for vulnerable individuals [@preston2007accessibility; @lucas2012transport]. 
-Ultimately, the use of metrics in policy and practice is key to make progress toward the Bay Area long-range transportation and land use goals while preserving the character of its diverse communities and adapting to future population growth.
+This memo is one of the series of policy analysis about autonomous vehicles for Bay Area. It trys to answer how the autonomous vehicles will affect urban land use, and What the MPO and cities should be planning to seize this opportunity and address the challenges.
 
-# Background
+# Background：Explains the current and projected status of AVs
+
+USDOT
+
+Ca DMV
+
+Waymoo and others
+
+Taas
+
+# Changes: Discusses how AVs could influence demand for transportation and, in turn land use. For this analysis, use both theory and research.
+
+## focus on relevant changes
+
+Many substantial implications of autonomous vehicles are not considered in this memo, such as safety, liability, and etc. [riple effects]. This analysis focus on the impact on land use, wich have short-term and long-term influences. The short-term influences include che change of parking, urban design, affected by travel demand and behavior
+
+The long-term influences include the reconstructure of urban forms and spatial distributions.
+
+## essence
+
+Four stage
+
+Theory: bid-rent theroy, utility maximize.
+
+Research: Identifies the benefits and costs of these possible outcomes.
+
+focus on Characteristic: 
+
+cut off labor cost, 
+
+round-the-clock services.
+
+full ridesharing by realtime matching
+
+## Methodology
+
+
+high risk in use sufficient principle, and likelihood principle. another option is convariance principle.
+
+Internet, Air Transport system, TNC
+
+## inference: 
+
+previous reaserch had give many estimation of the change on road capacities, parking lots, curve space.
+
+use cost and transaction costs - full match
+
+deals fail
+
+
+
+
+# The short-term Respose
+
+Presents policy and planning options for mitigating or otherwise addressing the possible land use effects.
+
+designating pilot area
+
+
+## housing, 
+
+## parking, 
+
+## urban design
+
+
+
+# The strategic planning
+
+Discusses how the MPO and cities may need alter the tools and analyses they use to consider AVs.
+
+Zoning, Division, and partion, not uniform 
+
+# Conclusion
+
+overestimated and under estimate
+
+from link to node
+
+CA should play a leading role. responsibility
+
 
 Plan Bay Area 2050 is an integrated long-range plan of transportation and land use developed and adopt by MTC (Metropolitan Transportation Commission) and ABAG (Association of Bay Area Governments). Work on Plan Bay Area 2050 is expected to begin in August 2019 and focused update that builds upon the growth pattern and strategies developed in the original Plan Bay Area 2040 (adopted in July 2017) but with updated planning assumptions that incorporate key economic, demographic and financial trends from the last four years.
 
