--- a/static/stat566/hw_stat566.Rmd
+++ b/static/stat566/hw_stat566.Rmd
@@ -877,7 +877,7 @@ Consider a single replicated 3-factor factorial model with all the main effects 
 
 (a) Write the complete model.
 
-$$y_{ijk}=\mu+\tau_i+\beta_j+\gamma_i+(\tau\beta)_{ij}+(\tau\gamma)_{ik}+\varepsilon_{ijk}$$
+$$y_{ijk}=\mu+\tau_i+\beta_j+\gamma_k+(\tau\beta)_{ij}+(\tau\gamma)_{ik}+\varepsilon_{ijk}$$
 
 for $i=1,2..,a$ is the number of treatment $A$ ; 
 
@@ -907,12 +907,12 @@ $\varepsilon_{ijk}\sim iid N(0,\sigma^2)$; $\tau_{i}\sim iid N(0,\sigma_\tau^2)$
 
 $(\tau\beta)_{ij}\sim iid N(0,\sigma_{\tau\beta}^2)$; $(\tau\gamma)_{ik}\sim iid N(0,\sigma_{\tau\gamma}^2)$; 
 
-$\varepsilon_{ijk}$, $\tau_{i}$, $\beta_{j}$ and $\gamma_{k}$ are independent.
+$\varepsilon_{ijk}$, $\tau_{i}$, $\beta_{j}$, $\gamma_{k}$, $(\tau\beta)_{ij}$, and $(\tau\gamma)_{ik}$ are independent.
 
 (b) Create the table with df, SS, EMS and F test statistic for each term in the model.
 
 $df_E=df_T-df_A-df_B-df_C-df_{AB}-df_{AC}=abc-1-(a-1)-(b-1)-(c-1)-(ab-a-b+1)-(ac-a-c+1)$
-$=a(b-1)(c-1)$
+$=abc-ab-ac+a=a(b-1)(c-1)$
 
 |term | i | j | k | df |  SS | EMS | F   |
 | --- |-- |-- | --| -- | --- | --- | --- |
@@ -921,9 +921,9 @@ $=a(b-1)(c-1)$
 |$\gamma_{k}$|a|b|1|$c-1$|$\frac1{ab}\sum_{k=1}^cy_{..k}^2-\frac{1}{abc}y_{...}^2$|$ab\sigma^2_{\gamma}+b\sigma^2_{\tau\gamma}+\sigma^2$|$\frac{MS_{C}}{MS_{AC}}$|
 |$(\tau\beta)_{ij}$|1|1|c|$(a-1)(b-1)$|$$\frac1c\sum_{i=1}^a\sum_{j=1}^by_{ij.}^2-\frac1{bc}\sum_{i=1}^ay_{i..}^2-\frac1{ac}\sum_{j=1}^by_{.j.}^2+\frac{1}{abc}y_{...}^2$$|$c\sigma^2_{\tau\beta}+\sigma^2$|$\frac{MS_{AB}}{MS_{E}}$|
 |$(\tau\gamma)_{ik}$|1|b|1|$(a-1)(c-1)$|$$\frac1b\sum_{i=1}^a\sum_{k=1}^cy_{i.k}^2-\frac1{bc}\sum_{i=1}^ay_{i..}^2-\frac1{ab}\sum_{k=1}^cy_{..k}^2+\frac{1}{abc}y_{...}^2$$|$b\sigma^2_{\tau\gamma}+\sigma^2$|$\frac{MS_{AC}}{MS_{E}}$|
-|$\varepsilon_{ijk}$|1|1|1|$a(b-1)(c-1)$|$$\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^cy_{ijk}^2-\frac{1}{abc}y_{...}^2$$|$\sigma^2$||
+|$\varepsilon_{ijk}$|1|1|1|$a(b-1)(c-1)$|$$\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^cy_{ijk}^2-\frac1c\sum_{i=1}^a\sum_{j=1}^by_{ij.}^2-\frac1b\sum_{i=1}^a\sum_{k=1}^cy_{i.k}^2+\frac1{bc}\sum_{i=1}^ay_{i..}^2$$|$\sigma^2$||
 
-
+$\sum_{i=1}^a\sum_{j=1}^b\sum_{k=1}^cy_{ijk}^2-\frac{1}{abc}y_{...}^2$
 
 ### Problem 4
 
