--- a/docs/usp570/pm_usp570.Rmd
+++ b/docs/usp570/pm_usp570.Rmd
@@ -5,7 +5,7 @@ date: 'June 11'
 output:
   pdf_document: default
   word_document: null
-bibliography: bib_usp570.bib
+bibliography: bib_ads.bib
 mainfont: Times New Roman
 geometry: margin=1in
 spacing: single
@@ -31,19 +31,23 @@ This memo is one of the series of policy analysis about autonomous vehicles for 
 
 # Background: Explains the current and projected status of AVs.
 
-USDOT
+Technology
 
-Ca DMV
+Industry: Waymoo and others
+Uber and Lyft Taas
 
-Waymoo and others
+Academia [@gandia2019autonomous]
 
-Taas
+Government USDOT, Ca DMV
+
+
+What are the crutial effects? What are the crutial response for land use?
 
 # Changes: Discusses how AVs could influence demand for transportation and, in turn land use. For this analysis, use both theory and research.
 
 ## focus on relevant changes
 
-Many substantial implications of autonomous vehicles are not considered in this memo, such as safety, liability, and etc. [riple effects]. This analysis focus on the impact on land use, wich have short-term and long-term influences. The short-term influences include che change of parking, urban design, affected by travel demand and behavior
+ [@milakis2017policy] Many substantial implications of autonomous vehicles are not considered in this memo, such as safety, liability, and etc. [riple effects]. This analysis focus on the impact on land use, wich have short-term and long-term influences. The short-term influences include che change of parking, urban design, affected by travel demand and behavior
 
 The long-term influences include the reconstructure of urban forms and spatial distributions.
 
@@ -63,6 +67,9 @@ round-the-clock services.
 
 full ridesharing by realtime matching
 
+Time cost [@singleton2019discussing]
+
+
 ## Methodology
 
 
@@ -71,6 +78,10 @@ high risk in use sufficient principle, and likelihood principle. another option 
 Internet, Air Transport system, TNC
 
 ## inference: 
+
+Behavior and land use [@soteropoulos2019impacts]
+
+[@hawkins2019integrated]
 
 previous reaserch had give many estimation of the change on road capacities, parking lots, curve space.
 
@@ -82,6 +93,8 @@ deals fail
 
 
 # The short-term Respose
+
+[@legacy2019planning]
 
 Presents policy and planning options for mitigating or otherwise addressing the possible land use effects.
 
@@ -96,6 +109,8 @@ designating pilot area
 
 
 # The strategic planning
+
+long-term effects [@milakis2019long]
 
 Discusses how the MPO and cities may need alter the tools and analyses they use to consider AVs.
 
