--- a/static/usp570/pm_usp570.Rmd
+++ b/static/usp570/pm_usp570.Rmd
@@ -45,9 +45,13 @@ What are the crutial effects? What are the crutial response for land use?
 
 # Changes: Discusses how AVs could influence demand for transportation and, in turn land use. For this analysis, use both theory and research.
 
+
+
 ## focus on relevant changes
 
  [@milakis2017policy] Many substantial implications of autonomous vehicles are not considered in this memo, such as safety, liability, and etc. [riple effects]. This analysis focus on the impact on land use, wich have short-term and long-term influences. The short-term influences include che change of parking, urban design, affected by travel demand and behavior
+ 
+Diamond of Assembly by[] and feedback cylce by []
 
 The long-term influences include the reconstructure of urban forms and spatial distributions.
 
