--- a/docs/usp570/rr_usp570.Rmd
+++ b/docs/usp570/rr_usp570.Rmd
@@ -39,10 +39,10 @@ The chaper 12 [@levinson2018metropolitan] involved two difficult conepts of dyan
 
 Causalyity is a more challenging topic. John Stuart Mill gives the three conditions:
 "Concomitant variation is the extent to which a cause X and an effect Y occur together or vary together in the way predicted by the hypothesis under consideration;
-The time order of occurrence condition states that the causing event must occur either before or simultaneously with the effect; it cannot occur after- wards;
+The time order of occurrence condition states that the causing event must occur either before or simultaneously with the effect; it cannot occur afterwards;
 The absence of other possible causal factors means that the factor or variable being investigated should be the only possible causal explanation."
 The last condition represents the 'sufficiency' principle, which is the most difficult to satisfy and not feasible for most research on transprotation.
-The second one only can reject the effects of Y on X but cannot prove the causality bewteen them. The first condition reflect the equivariance principle, which includes 'measurement equivariance' and 'formal invariance'. Researcher often use former approach, use previous models and modify some assumptions or parameters in simulation like cheaper travel cost hasing longer VMT. The part of 'formal invariance' is critical for applicability but is still hard to comfirm. Many scholar still keen on this field because they believe AVs and ridesharing could fill the gap between the 'Mount Transit' and 'Mount Auto.'  The transcendental empiricism by Deleuze might give us some inspiration.
+The second one only can reject the effects of Y on X but cannot prove the causality bewteen them. The first condition reflect the equivariance principle, which includes 'measurement equivariance' and 'formal invariance'. Researcher often use former approach, use previous models and modify some assumptions or parameters in simulation like cheaper travel cost making longer VMT. The part of 'formal invariance' is critical for applicability but is harder to comfirm. Many scholars still keen on the 'virtual' topics of AVs and ridesharing because they believe these could fill the gap between the 'Mount Transit' and 'Mount Auto.' [@levinson2018metropolitan, p.224] This phenomenon itself is a force for AVs' implementation. Deleuze said "real without being actual, ideal without being abstract." [@deleuze1994difference] The phylosophy of transcendental empiricism might give us some inspiration.
 
 
 References {#references .unnumbered}
