--- a/docs/usp570/rr_usp570.tex
+++ b/docs/usp570/rr_usp570.tex
@@ -167,7 +167,7 @@ conditions: ``Concomitant variation is the extent to which a cause X and
 an effect Y occur together or vary together in the way predicted by the
 hypothesis under consideration; The time order of occurrence condition
 states that the causing event must occur either before or simultaneously
-with the effect; it cannot occur after- wards; The absence of other
+with the effect; it cannot occur afterwards; The absence of other
 possible causal factors means that the factor or variable being
 investigated should be the only possible causal explanation.'' The last
 condition represents the `sufficiency' principle, which is the most
@@ -177,17 +177,24 @@ cannot prove the causality bewteen them. The first condition reflect the
 equivariance principle, which includes `measurement equivariance' and
 `formal invariance'. Researcher often use former approach, use previous
 models and modify some assumptions or parameters in simulation like
-cheaper travel cost hasing longer VMT. The part of `formal invariance'
-is critical for applicability but is still hard to comfirm. Many scholar
-still keen on this field because they believe AVs and ridesharing could
-fill the gap between the `Mount Transit' and `Mount Auto.' The
-transcendental empiricism by Deleuze might give us some inspiration.
+cheaper travel cost making longer VMT. The part of `formal invariance'
+is critical for applicability but is harder to comfirm. Many scholars
+still keen on the `virtual' topics of AVs and ridesharing because they
+believe these could fill the gap between the `Mount Transit' and `Mount
+Auto.' (Levinson and Krizek 2018, 224) This phenomenon itself is a force
+for AVs' implementation. Deleuze said ``real without being actual, ideal
+without being abstract.'' (Deleuze 1994) The phylosophy of
+transcendental empiricism might give us some inspiration.
 
 \hypertarget{references}{%
 \section*{References}\label{references}}
 \addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
+\leavevmode\hypertarget{ref-deleuze1994difference}{}%
+Deleuze, Gilles. 1994. \emph{Difference and Repetition}. Columbia
+University Press.
+
 \leavevmode\hypertarget{ref-levinson2018metropolitan}{}%
 Levinson, David M, and Kevin J Krizek. 2018. \emph{Metropolitan Land Use
 and Transport: Planning for Place and Plexus}. Routledge.
