--- a/static/usp570/bib_usp570.bib
+++ b/static/usp570/bib_usp570.bib
@@ -468,3 +468,10 @@
   year={2017},
   publisher={John wiley \& sons}
 }
+
+@book{deleuze1994difference,
+  title={Difference and repetition},
+  author={Deleuze, Gilles},
+  year={1994},
+  publisher={Columbia University Press}
+}
