--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -657,11 +657,18 @@ $$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{
 
 (d) Show that the orthogonal least squares line $\lambda=1$ is always between the lines given by the ordinary regressions of y on x and of x on y.
 
-$\lambda=1$, $S_{xx}=S_{yy}$
+$\lambda=\sigma^2_{\delta}/\sigma^2_{\varepsilon}=\frac{S_{xx}/n}{S_{yy}/n}=1$, $S_{xx}=S_{yy}$
 
-$$\begin{cases}\frac{S_{yy}}{S_{xy}}<1<\frac{S_{xy}}{S_{xx}}& if\  S_{xy}>S_{xx}=S_{yy} \\\frac{S_{xy}}{S_{xx}}<1<\frac{S_{yy}}{S_{xy}}& if\  S_{xy}<S_{xx}=S_{yy} \end{cases}$$
+For $\lambda=1$, when $S_{xy}>0$,
 
-If $S_{xy}<0$
+$$\hat\beta(\lambda)=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}\le\frac{S_{yy} + \sqrt{(-S_{yy})^2 }}{2S_{xy}}=\frac{S_{yy}}{S_{xy}}$$
+
+$$\hat\beta(\lambda)=\frac{2S_{xy}}{(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}\ge\frac{2S_{xy}}{S_{xx} + \sqrt{(S_{xx})^2 }}=\frac{S_{xy}}{S_{xx}}$$
+
+For $S_{yy}\ge0$, $S_{xx}\ge0$, when $S_{xy}<0$, $\frac{-S_{xy}}{S_{xx}}<-\hat\beta(\lambda)<\frac{S_{yy}}{-S_{xy}}$, therefor,
+
+$$\frac{|S_{xy}|}{S_{xx}}<|\hat\beta(\lambda)|<\frac{S_{yy}}{|S_{xy}|}$$
+
 
 Therefore, the orthogonal least squares line $\lambda=1$ is always between the lines given by the ordinary regressions of y on x and of x on y.
 
@@ -690,7 +697,9 @@ s_yy
 s_xy
 (s_yy-s_xx+sqrt((s_xx-s_yy)^2+4*s_xy^2))/(2*s_xy)
 var(x)/var(y)
-s_xx/s_yy
+lambda <- s_xx/s_yy
+
+(lambda*s_yy-s_xx+sqrt((s_xx-lambda*s_yy)^2+4*lambda*s_xy^2))/(2*lambda*s_xy)
 s_xy/s_xx
 s_yy/s_xy
 ```
@@ -702,9 +711,13 @@ $$\hat\beta(\lambda)=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2
 
 $\lambda=V[x]/V[y]=S_{xx}/S_{yy}=0.006696296$
 
+$$\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=12.22032$$
+
 The slope of the ordinary regression of y on x is $S_{xy}/S_{xx}=10.57143$.
 
 The reciprocal of the slope of the ordinary regression of x on y is $S_{yy}/S_{xy}=14.1264$ 
+
+The results show that the MLE of the slope assuming the EIV model locates in the boundaries between the slopes of the ordinary regression of x on y and of y on x.
 
 ##
 
