--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -655,17 +655,17 @@ $$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{
 
 $$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{S_{yy}}{2S_{xy}})^2 +\frac1\lambda]^{-\frac12}\frac1{2S_{xy}^2\lambda^2}[S_{yy}S_{xx}-S_{xx}^2-2S_{xy}^2]$$
 
+$$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac1{2S_{xy}\lambda^2}[4S_{xy}^2\lambda +(S_{xx}-S_{yy}\lambda)^2]^{-\frac12}[S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2]$$
+
 (d) Show that the orthogonal least squares line $\lambda=1$ is always between the lines given by the ordinary regressions of y on x and of x on y.
 
-$\lambda=\sigma^2_{\delta}/\sigma^2_{\varepsilon}=\frac{S_{xx}/n}{S_{yy}/n}=1$, $S_{xx}=S_{yy}$
-
-For $\lambda=1$, when $S_{xy}>0$,
+For $\lambda=1$, $S_{yy}\ge0$, $S_{xx}\ge0$, and the formula in (a), when $S_{xy}>0$,
 
 $$\hat\beta(\lambda)=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}\le\frac{S_{yy} + \sqrt{(-S_{yy})^2 }}{2S_{xy}}=\frac{S_{yy}}{S_{xy}}$$
 
 $$\hat\beta(\lambda)=\frac{2S_{xy}}{(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}\ge\frac{2S_{xy}}{S_{xx} + \sqrt{(S_{xx})^2 }}=\frac{S_{xy}}{S_{xx}}$$
 
-For $S_{yy}\ge0$, $S_{xx}\ge0$, when $S_{xy}<0$, $\frac{-S_{xy}}{S_{xx}}<-\hat\beta(\lambda)<\frac{S_{yy}}{-S_{xy}}$, therefor,
+When $S_{xy}<0$, $\frac{-S_{xy}}{S_{xx}}<-\hat\beta(\lambda)<\frac{S_{yy}}{-S_{xy}}$, therefore,
 
 $$\frac{|S_{xy}|}{S_{xx}}<|\hat\beta(\lambda)|<\frac{S_{yy}}{|S_{xy}|}$$
 
@@ -705,11 +705,11 @@ s_yy/s_xy
 ```
 
 
-When $\lambda=1$
+If $\lambda==1$,
 
 $$\hat\beta(\lambda)=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}=14.10272$$
 
-$\lambda=V[x]/V[y]=S_{xx}/S_{yy}=0.006696296$
+$\hat\lambda=\hat\sigma^2_{\delta}/\hat\sigma^2_{\varepsilon}=\frac{S_{xx}/n}{S_{yy}/n}=0.006696296$
 
 $$\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=12.22032$$
 
@@ -718,6 +718,7 @@ The slope of the ordinary regression of y on x is $S_{xy}/S_{xx}=10.57143$.
 The reciprocal of the slope of the ordinary regression of x on y is $S_{yy}/S_{xy}=14.1264$ 
 
 The results show that the MLE of the slope assuming the EIV model locates in the boundaries between the slopes of the ordinary regression of x on y and of y on x.
+
 
 ##
 
