--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -641,12 +641,16 @@ $$=\frac{-(S_{xx}-\lambda S_{yy})^2+(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2
 
 $$\lim\limits_{\lambda\to0}\hat\beta(\lambda)=\frac{2S_{xy}}{(S_{xx}-0) + \sqrt{(S_{xx}-0)^2 +0}}=S_{xy}/S_{xx}$$
 
+ ---
+ 
 (b) Show that  $\lim\limits_{\lambda\to\infty}\hat\beta(\lambda)=S_{yy}/S_{xy}$ the reciprocal of the slope of the ordinary regression of x on y.
 
 $$\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=\frac{-(\frac{S_{xx}}{\lambda}-S_{yy}) + \sqrt{(\frac{S_{xx}}{\lambda}- S_{yy})^2 +\frac{4S_{xy}^2}{\lambda}}}{2S_{xy}}$$
 
 $$\lim\limits_{\lambda\to\infty}\hat\beta(\lambda)=\frac{-(0-S_{yy}) + \sqrt{(0- S_{yy})^2 +0}}{2S_{xy}}=S_{yy}/S_{xy}$$
 
+ ---
+ 
 (c) Show that $\hat\beta(\lambda)$ is, in fact, monotone in $\lambda$ and is increasing if $S_{xy}>0$ and decreasing if $S_{xy}<0$.
 
 $$\frac{d}{d\lambda}\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=-\frac{S_{xx}}{2S_{xy}\lambda}+\frac{S_{yy}}{2S_{xy}}+[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{S_{yy}}{2S_{xy}})^2 +\frac1\lambda]^{\frac12}$$
@@ -657,6 +661,12 @@ $$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{
 
 $$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac1{2S_{xy}\lambda^2}[4S_{xy}^2\lambda +(S_{xx}-S_{yy}\lambda)^2]^{-\frac12}[S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2]$$
 
+When $S_{xy}>0$, $\frac{d}{d\lambda}\hat\beta(\lambda)>0$; when $S_{xy}<0$, $\frac{d}{d\lambda}\hat\beta(\lambda)<0$, 
+
+Therefore, $\hat\beta(\lambda)$ is monotone in $\lambda$ and is increasing if $S_{xy}>0$ and decreasing if $S_{xy}<0$.
+
+ ---
+
 (d) Show that the orthogonal least squares line $\lambda=1$ is always between the lines given by the ordinary regressions of y on x and of x on y.
 
 For $\lambda=1$, $S_{yy}\ge0$, $S_{xx}\ge0$, and the formula in (a), when $S_{xy}>0$,
@@ -665,12 +675,14 @@ $$\hat\beta(\lambda)=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2
 
 $$\hat\beta(\lambda)=\frac{2S_{xy}}{(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}\ge\frac{2S_{xy}}{S_{xx} + \sqrt{(S_{xx})^2 }}=\frac{S_{xy}}{S_{xx}}$$
 
-When $S_{xy}<0$, $\frac{-S_{xy}}{S_{xx}}<-\hat\beta(\lambda)<\frac{S_{yy}}{-S_{xy}}$, therefore,
+When $S_{xy}<0$, $\frac{-S_{xy}}{S_{xx}}<-\hat\beta(\lambda)<\frac{S_{yy}}{-S_{xy}}$, then,
 
 $$\frac{|S_{xy}|}{S_{xx}}<|\hat\beta(\lambda)|<\frac{S_{yy}}{|S_{xy}|}$$
 
 
 Therefore, the orthogonal least squares line $\lambda=1$ is always between the lines given by the ordinary regressions of y on x and of x on y.
+
+ ---
 
 (e) The following data were collected in a study to examine the relationship between brain weight and body weight in a number of animal species.
 
@@ -705,7 +717,7 @@ s_yy/s_xy
 ```
 
 
-If $\lambda==1$,
+If $\lambda=1$,
 
 $$\hat\beta(\lambda)=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}=14.10272$$
 
