--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -659,7 +659,9 @@ $$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{
 
 $$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{S_{yy}}{2S_{xy}})^2 +\frac1\lambda]^{-\frac12}\frac1{2S_{xy}^2\lambda^2}[S_{yy}S_{xx}-S_{xx}^2-2S_{xy}^2]$$
 
-$$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac1{2S_{xy}\lambda^2}[4S_{xy}^2\lambda +(S_{xx}-S_{yy}\lambda)^2]^{-\frac12}[S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2]$$
+$$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac{S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2}{2S_{xy}\lambda^2[4S_{xy}^2\lambda +(S_{xx}-S_{yy}\lambda)^2]^{\frac12}}=\frac{1}{2S_{xy}\lambda^2}(S_{xx}+\frac{S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2}{[4S_{xy}^2\lambda +(S_{xx}-S_{yy}\lambda)^2]^{\frac12}})$$
+
+For $S_{yy}S_{xx}>S_{xy}^2$, $S_{xx}^2>\lambda S_{xy}^2$, $S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2>0$
 
 When $S_{xy}>0$, $\frac{d}{d\lambda}\hat\beta(\lambda)>0$; when $S_{xy}<0$, $\frac{d}{d\lambda}\hat\beta(\lambda)<0$, 
 
@@ -718,12 +720,11 @@ s_yy/s_xy
 
 
 If $\lambda=1$,
+$\hat\beta(\lambda)=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}=14.10272$
 
-$$\hat\beta(\lambda)=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}=14.10272$$
+If $\hat\lambda=\hat\sigma^2_{\delta}/\hat\sigma^2_{\varepsilon}=\frac{S_{xx}/n}{S_{yy}/n}=0.006696296$
 
-$\hat\lambda=\hat\sigma^2_{\delta}/\hat\sigma^2_{\varepsilon}=\frac{S_{xx}/n}{S_{yy}/n}=0.006696296$
-
-$$\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=12.22032$$
+$\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=12.22032$
 
 The slope of the ordinary regression of y on x is $S_{xy}/S_{xx}=10.57143$.
 
